--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -5,9 +5,9 @@
 
 # Appearance
 
-theme: minimal
-day_night: true
-font: ''
+theme: Earth
+day_night: false
+font: 'Classic'
 font_size: L
 
 # SEO
@@ -70,14 +70,14 @@ main_menu:
 
 date_format: 'Jan 2, 2006'
 time_format: '3:04 PM'
-address_format: en-us
+address_format: en-gb
 
 # Site features
 
 highlight: true
 highlight_languages:
   - r
-math: false
+math: true
 diagram: false
 privacy_pack: false
 edit_page:
