--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -27,7 +27,7 @@ email: augustin.marignier.14@ucl.ac.uk
 main_menu:
   enable: true
   align: l
-  show_logo: false
+  show_logo: true
   show_language: false
   show_day_night: true
   show_search: true
