--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -22,7 +22,7 @@ twitter: ''
 
 email: augustin.marignier.14@ucl.ac.uk
 address: 
-  street: Department of Earth Sciences, Univeristy College London
+  street: Department of Earth Sciences, University College London
   city: London
   postcode: WC1E 6BT
   country: United Kingdom
