--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -7,7 +7,7 @@ on:
   pull_request:
 
 jobs:
-  deploy:
+  setup:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
@@ -15,6 +15,17 @@ jobs:
           submodules: true  # Fetch Hugo themes (true OR recursive)
           fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
 
+      - name: Generate CV
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+        run: |
+          cd content/cv
+          python generate_cv.py
+    
+  deploy:
+    runs-on: ubuntu-22.04
+    steps:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
