--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -21,12 +21,12 @@ jobs:
           python-version: '3.10'
       - run: |
           pip install -r requirements.txt
-          cd content/cv
+          cd ${GITHUB_WORKSPACE}/content/cv
           python generate_cv.py
       - uses: docker://pandoc/latex
         with:
             args: >-
-                _index.md
+                ${GITHUB_WORKSPACE}/content/cv/_index.md
                 --variable
                 geometry=margin=0.5in
                 --variable
