--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -1,6 +1,6 @@
 # SITE SETUP
-# Guide: https://wowchemy.com/docs/getting-started/
-# Documentation: https://wowchemy.com/docs/
+# Guide: https://docs.hugoblox.com/tutorial/
+# Documentation: https://docs.hugoblox.com/
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 # Appearance
@@ -30,20 +30,22 @@ address:
 
 # Site header
 
-main_menu:
-  enable: true
-  align: l
-  show_logo: true
-  show_language: false
-  show_day_night: true
-  show_search: true
-  highlight_active_link: true
+header:
+  navbar:
+    enable: true
+    align: l
+    show_logo: true
+    show_language: false
+    show_day_night: true
+    show_search: true
+    highlight_active_link: true
 
 # Localization
 
-date_format: '02 Jan 2006'
-time_format: '3:04 PM'
-address_format: en-gb
+locale:
+  date_format: '02 Jan 2006'
+  time_format: '3:04 PM'
+  address_format: en-gb
 
 # Site features
 
