--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -5,10 +5,9 @@
 
 # Appearance
 
-theme: 'my_theme'
-day_night: true
-font: 'Classic'
-font_size: M
+appearance:
+  theme_day: my_theme
+  theme_night: my_theme
 
 # SEO
 
@@ -32,12 +31,19 @@ address:
 
 header:
   navbar:
+    # Display the navigation bar?
     enable: true
-    align: l
-    show_logo: true
-    show_language: false
-    show_day_night: true
+    # Choose a built-in navigation blox or create your own
+    blox: "navbar"
+    # Align menu links: `left`, `center`, or `right`
+    align: "left"
+    # Fix the navigation bar to the top of the page
+    fixed_to_top: false
+    # Let the user choose between light or dark mode?
+    show_theme_chooser: true
+    # Let the user search from the navigation bar?
     show_search: true
+    # Attempt to automatically highlight the active menu link? Can be disabled for complex sites.
     highlight_active_link: true
 
 # Localization
