--- a/data/themes/my_theme.toml
+++ b/data/themes/my_theme.toml
@@ -1,26 +1,27 @@
 # Theme metadata
 name = "my_theme"
 
-# Is theme light or dark?
-light = true
+[light]
+    # Is theme light or dark?
+    light = true
 
-# Primary
-primary = "#1565c0"
-background = "#ffffff"
+    # Primary
+    primary = "#1565c0"
+    background = "#ffffff"
 
-# Menu
-menu_primary = "#ffffff"
-menu_text = "#111111"
-menu_text_active = "#2962ff"
-menu_title = "#2b2b2b"
+    # Menu
+    menu_primary = "#ffffff"
+    menu_text = "#111111"
+    menu_text_active = "#2962ff"
+    menu_title = "#2b2b2b"
 
-# Home sections
-home_section_odd = "#ffffff"
-home_section_even = "#e1e1e1"
+    # Home sections
+    home_section_odd = "#ffffff"
+    home_section_even = "#e1e1e1"
 
-# Links
-link = "#2962ff"
-link_hover = "#1912ff"
+    # Links
+    link = "#2962ff"
+    link_hover = "#1912ff"
 
 [dark]
   background = "#000000"
