--- a/data/themes/my_theme.toml
+++ b/data/themes/my_theme.toml
@@ -12,7 +12,7 @@ name = "my_theme"
     # Menu
     menu_primary = "#ffffff"
     menu_text = "#111111"
-    menu_text_active = "#2962ff"
+    menu_text_active = "#2C639C"
     menu_title = "#2b2b2b"
 
     # Home sections
@@ -20,19 +20,19 @@ name = "my_theme"
     home_section_even = "#e1e1e1"
 
     # Links
-    link = "#2962ff"
-    link_hover = "#1912ff"
+    link = "#2C639C"
+    link_hover = "#4399F3"
 
 [dark]
-  background = "#000000"
+  background = "#202020"
 
-  home_section_odd = "#000000"
+  home_section_odd = "#202020"
   home_section_even = "#191919"
 
-  menu_primary = "#000000"
+  menu_primary = "#202020"
   menu_text = "#eeeeee"
-  menu_text_active = "#2962ff"
+  menu_text_active = "#4399F3"
   menu_title = "#bbbbbb"
 
-  link = "#1912ff"
-  link_hover = "#2962ff"
+  link = "#4399F3"
+  link_hover = "#2C639C"
