--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,28 @@
 beautifulsoup4==4.11.1
+bibtexparser==1.1.0
 black==22.10.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
 click==8.1.3
 flake8==6.0.0
+future==1.0.0
+idna==3.6
+latexcodec==3.0.1
 Markdown==3.4.1
 mccabe==0.7.0
 mypy-extensions==0.4.3
 pathspec==0.10.2
 platformdirs==2.5.4
+pybtex==0.25.1
 pycodestyle==2.10.0
 pyflakes==3.0.0
+pyparsing==3.1.2
 python-dateutil==2.8.2
 PyYAML==6.0
+requests==2.31.0
+ruamel.yaml==0.16.10
 six==1.16.0
 soupsieve==2.3.2.post1
+toml==0.10.2
 tomli==2.0.1
+urllib3==2.2.1
