--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -37,6 +37,7 @@ jobs:
             run: |
                 cd ${GITHUB_WORKSPACE}/content/cv/cv
                 latexmk -quiet -pdf main.tex
+                cp main.pdf ${GITHUB_WORKSPACE}/uploads/cv.pdf
                 cd ${GITHUB_WORKSPACE}
 
       - name: Setup Hugo
